# typed_ecs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  godbolt_analysis.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
benches/: bench_main.rs
benches/benchmarks/: fuzz_async_plugins.rs  fuzz_empty_plugins.rs  fuzz_increment_plugins.rs  mod.rs  profile.rs
examples/: async.rs  custom_executor.rs  embassy_async.rs  hello_world.rs  on_exit.rs  panic.rs  parallel.rs  plugin_collection.rs  profile.rs  rand_par.rs  schedules.rs  tokio_async.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  executor.rs  guard.rs  lib.rs  plugin.rs  plugin_collection.rs  pluginlist.rs  profile.rs  shared_data.rs  should_exit.rs
typed_ecs_macros/: Cargo.toml  README.md
typed_ecs_macros/src/: generate_collection.rs  lib.rs  schedule_contents.rs
