[package]
name = "typed_ecs"
version = "0.0.2"
edition = "2024"
description = "A no_std, no_alloc Entity Component System with compile-time guarantees"
authors = ["heydocode"]
license = "MIT"
repository = "https://github.com/heydocode/typed_ecs"
documentation = "https://docs.rs/typed_ecs"
readme = "README.md"
keywords = ["ecs", "no-std", "no-alloc", "game", "embedded"]
categories = ["no-std", "embedded", "game-development"]
publish = true

[workspace]
members = ["macros"]

[features]
default = ["profile-tracy"]
profile = [
    "dep:tracing",
]

profile-tracy = [
    "profile",
    "dep:tracing-subscriber",
    "dep:tracing-tracy",
]

profile-forest = [
    "profile",
    "dep:tracing-subscriber",
    "dep:tracing-forest",
]

[dependencies]
# public macro re-export
macros = { path = "macros" }
# 3 profiling crates; not included by default
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
tracing-tracy = { version = "0.11.4", optional = true, features = ["flush-on-exit"] }
tracing-forest = { version = "0.3.1", optional = true, features = ["full"] }

[dev-dependencies]
seq-macro = "0.3.6"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[example]]
name = "profile"
required-features = ["profile"]
path = "examples/profile.rs"

[[bench]]
name = "bench_main"
harness = false