[package]
name = "typed_ecs"
version = "0.0.2"
edition = "2024"
description = "A no_std, no_alloc ECS with compile-time guarantees, and BLAZING PERFORMANCE!"
authors = ["heydocode"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/heydocode/typed_ecs"
documentation = "https://docs.rs/typed_ecs"
readme = "README.md"
keywords = ["ecs", "no-std", "no-alloc", "typed", "embedded"]
# I think I need help categorizing this crate... Please open an issue if you will doing so...
# The thing is that this crate is very suitable for literally everything where developers are
# used to Rust's features (traits, generics, ...).
# 
# - memory management because that's up to the plugin's developer to design the memory space 
# its plugin will use (in a SharedData supertrait constraint)
# 
# - devtools because this allows to organize plugins possibly across various codebases into one 
# App, with aggressive optimizations and extreme cache locality (= performance), and there are
# also built-in profilers for optimizing & analysis purposes.
# 
# - game-engines because this project has so much potential in this area, 
# btw I plan creating a game engine using this ecs
categories = ["no-std", "embedded", "memory-management", "development-tools", "game-engines"]
publish = true

[workspace]
members = ["typed_ecs_macros"]

[features]
default = ["std"]
std = []
no-std = ["dep:embassy-executor"]
profile = ["dep:tracing"]

profile-tracy = ["profile", "dep:tracing-subscriber", "dep:tracing-tracy"]

profile-forest = ["profile", "dep:tracing-subscriber", "dep:tracing-forest"]

[dependencies]
# 2 public macro re-exports
typed_ecs_macros = { version = "0.0.2", path = "typed_ecs_macros" }
futures = { version = "0.3.32", default-features = false, features = [
    "async-await"
]}
# 3 profiling crates; not included by default
tracing = { version = "0.1", default-features = false, optional = true }
embassy-executor = { version = "0.9.1", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
tracing-tracy = { version = "0.11.4", optional = true, features = [
  "flush-on-exit",
] }
tracing-forest = { version = "0.3.1", optional = true, features = ["full"] }

[dev-dependencies]
seq-macro = "0.3.6"
# Produces reports in `target/criterion/report/index.html` on `cargo bench`
# If it doesn't appear, do `cargo clean` and redo the benches, repeat a few times if needed
criterion = { version = "0.8.2", features = ["html_reports"] }
tokio = { version = "1", features = ["full"] }

[[example]]
name = "profile"
required-features = ["profile"]
path = "examples/profile.rs"

[[bench]]
name = "bench_main"
harness = false
