[package]
name = "typed_ecs_macros"
version = "0.0.3"
edition = "2024"
description = "Procedural macros for `typed_ecs`"
documentation = "https://docs.rs/typed_ecs_macros"
authors = ["heydocode"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/heydocode/typed_ecs"
readme = "README.md"
publish = true

[lib]
proc-macro = true

[features]
parallel = []

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
